--- a/KanjiRyokucha/Info.plist
+++ b/KanjiRyokucha/Info.plist
@@ -66,6 +66,8 @@
 	</array>
 	<key>CFBundleDisplayName</key>
 	<string>Kanji Ryokucha</string>
+	<key>ITSAppUsesNonExemptEncryption</key>
+	<false/>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
 </dict>
