--- a/.gitignore
+++ b/.gitignore
@@ -70,6 +70,7 @@ Carthage/Build
 # For more information about the recommended setup visit:
 # https://github.com/fastlane/fastlane/blob/master/fastlane/docs/Gitignore.md
 
+fastlane/metadata/review_information/*
 fastlane/report.xml
 fastlane/Preview.html
 fastlane/screenshots
