drop pods for spm, drop firebase, target ios15, new bkg tasks api

--- a/KanjiRyokucha/Info.plist
+++ b/KanjiRyokucha/Info.plist
@@ -59,6 +59,10 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key>BGTaskSchedulerPermittedIdentifiers</key>
+	<array>
+		<string>com.gbuela.KanjiRyokucha.bg</string>
+	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
 </dict>
